--- a/design2/css/main.css
+++ b/design2/css/main.css
@@ -9,6 +9,12 @@ h1 {
   font-style: normal;
   font-size: 50px;
 }
-p {
+p, h1 {
   text-align: center;
 }
+a:link, a:visited, a:active {
+  color:black;
+  text-decoration: none;
+}
+a:hover {
+  color: mediumturquoise;
