--- a/design4/css/main.css
+++ b/design4/css/main.css
@@ -12,3 +12,9 @@ h1 {
 p, h1 {
   text-align: center;
 }
+a:link, a:visited, a:active {
+  color:black;
+  text-decoration: none;
+}
+a:hover {
+  color: mediumturquoise;
