--- a/mobileDesign2/css/main.css
+++ b/mobileDesign2/css/main.css
@@ -1,6 +1,6 @@
 * {
-  margin: 0;
-  padding: 0;
+  margin: 100;
+  padding: 100;
   box-sizing: border-box;
 }
 h1 {
@@ -23,3 +23,12 @@ img {
   margin-right: 20px;
   float: left;
 }
+p, h1 {
+  text-align: center;
+}
+a:link, a:visited, a:active {
+  color:black;
+  text-decoration: none;
+}
+a:hover {
+  color: mediumturquoise;
